# slamwareAPP

./: .gitignore  CMakeLists.txt  package.xml
launch/: slamwareNode.launch
msg/: Battery.msg  Pose.msg
src/: TaskManager.cpp  TaskManager.h  main.cpp  slamware.cpp  slamware.h
